# sectxt

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  checktop500  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: main.yml  trufflehog.yaml
fuzz/: .gitignore  _examples
fuzz/_examples/: github_com.txt  wordpress_org.txt  www_gov_uk.txt
scripts/: checkalexa1m  checktop500
sectxtbin/: Cargo.toml  README.md
sectxtbin/src/: main.rs  network.rs  settings.rs  status.rs  types.rs  website.rs
sectxtfuzz/: Cargo.toml
sectxtfuzz/src/: main.rs
sectxtlib/: Cargo.toml  Makefile  README.md
sectxtlib/resources/test/: .gitattributes
sectxtlib/resources/test/gen_unsigned/: gen_unsigned_0001.stxt  gen_unsigned_0002.stxt  gen_unsigned_0003.stxt  gen_unsigned_0004.stxt  gen_unsigned_0005.stxt  gen_unsigned_0006.stxt  gen_unsigned_0007.stxt  gen_unsigned_0008.stxt  gen_unsigned_0009.stxt  gen_unsigned_0010.stxt  gen_unsigned_0011.stxt  gen_unsigned_0012.stxt  gen_unsigned_0013.stxt  gen_unsigned_0014.stxt  gen_unsigned_0015.stxt  gen_unsigned_0016.stxt  gen_unsigned_0017.stxt  gen_unsigned_0018.stxt  gen_unsigned_0019.stxt  gen_unsigned_0020.stxt  gen_unsigned_0021.stxt  gen_unsigned_0022.stxt  gen_unsigned_0023.stxt  gen_unsigned_0024.stxt  gen_unsigned_0025.stxt  gen_unsigned_0026.stxt  gen_unsigned_0027.stxt  gen_unsigned_0028.stxt  gen_unsigned_0029.stxt  gen_unsigned_0030.stxt  gen_unsigned_0031.stxt  gen_unsigned_0032.stxt  gen_unsigned_0033.stxt  gen_unsigned_0034.stxt  gen_unsigned_0035.stxt  gen_unsigned_0036.stxt  gen_unsigned_0037.stxt  gen_unsigned_0038.stxt  gen_unsigned_0039.stxt  gen_unsigned_0040.stxt  (+60 more)
sectxtlib/resources/test/valid/: github_com.txt  rfc_signed.txt  rfc_unsigned.txt  wordpress_org.txt  www_gov_uk.txt
sectxtlib/resources/test/valid_signed/: opera_com.stxt  redhat.stxt  rfc_signed.stxt  rfc_signed.txt  securitytxt_org.stxt
sectxtlib/resources/test/valid_unsigned/: www_gov_uk.txt
sectxtlib/src/: field.rs  fields.rs  lib.rs  parse_error.rs  parsers.rs  pgpcleartextmessage.rs  raw_field.rs  securitytxt.rs  securitytxt_options.rs  signature.rs  types.rs
src/: args.yml  main.rs  parse.rs  types.rs
src/parse/: parsers.rs  types.rs
