[package]
name = "sectxt"
version = "0.0.10"
authors = ["eikendev"]
edition = "2018"
description = "A tool for working with security.txt files"
homepage = "https://github.com/eikendev/sectxt"
repository = "https://github.com/eikendev/sectxt.git"
readme = "README.md"
license = "ISC"

[dependencies]
chrono = ">=0.4.10"
futures = ">=0.3.8"
iref = ">=1.1"
nom = ">=5.1.2"
oxilangtag = ">=0.1.0"
reqwest = ">=0.11"
thiserror = ">=1.0"
human-panic = "1.0.3"
argh = "0.1.8"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
