[package]
name = "sectxt"
version = "0.2.4"
authors = ["eikendev"]
edition = "2021"
description = "A tool for working with security.txt files as specified in RFC 9116"
homepage = "https://github.com/eikendev/sectxt"
repository = "https://github.com/eikendev/sectxt.git"
readme = "README.md"
license = "ISC"

[dependencies]
sectxtlib = { path = "../sectxtlib", version = "0.2.4" }
anyhow = ">=1.0"
argh = ">=0.1"
futures = ">=0.3"
human-panic = ">=1.1"
lazy_static = ">=1.4"
reqwest = ">=0.11"
tracing = ">=0.1.37"
tracing-subscriber = { version = ">=0.3.16", features = ["env-filter", "json", "valuable"] }
url = ">=2.3.0"
valuable = ">=0.1.0"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
