[package]
name = "sectxt"
version = "0.4.0"
authors = ["eikendev"]
edition = "2021"
description = "A tool for working with security.txt files as specified in RFC 9116"
homepage = "https://github.com/eikendev/sectxt"
repository = "https://github.com/eikendev/sectxt.git"
readme = "README.md"
license = "ISC"

[dependencies]
sectxtlib = { path = "../sectxtlib", version = "0.4.0" }
anyhow = "1.0.98"
argh = "0.1.13"
futures = "0.3.31"
human-panic = "2.0.6"
lazy_static = "1.5.0"
reqwest = "0.13.1"
tracing = "0.1.44"
tracing-subscriber = { version = ">=0.3.20", features = ["env-filter", "json", "valuable"] }
url = "2.5.8"
valuable = "0.1.1"

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros"]
