[package]
name = "sectxtlib"
version = "0.2.0"
authors = ["eikendev"]
edition = "2021"
description = "A library for parsing and validating security.txt files as specified in RFC 9116"
homepage = "https://github.com/eikendev/sectxt"
repository = "https://github.com/eikendev/sectxt.git"
readme = "README.md"
license = "ISC"

[dependencies]
chrono = ">=0.4.10"
iri-string = ">=0.7.0"
nom = ">=5.1.2"
oxilangtag = ">=0.1.0"
thiserror = ">=1.0"
